--- a/app/src/main/res/drawable/bg_header_touchable.xml
+++ b/app/src/main/res/drawable/bg_header_touchable.xml
@@ -4,7 +4,7 @@
     <item android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/colorPrimaryDark"
+                android:color="#29FFFFFF"
                 />
             <padding
                 android:bottom="0dp"
