--- a/ck-lib/src/main/res/values/styles.xml
+++ b/ck-lib/src/main/res/values/styles.xml
@@ -1,3 +1,11 @@
 <resources>
+    <!--Loading加载框样式，用于网络加载时阻塞UIDialog样式-->
+    <style name="flat_style_loading_dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">false</item><!-- 半透明 -->
+        <item name="android:windowBackground">@drawable/flat_loading_dialog_background</item>
+        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
+    </style>
 
 </resources>
