--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="colorPrimary">#f07aac</color>
     <color name="colorPrimaryDark">#f7f8f8</color>
     <color name="colorAccent">#007e82</color>
-    <color name="colorDark">#69c5a3</color>
+    <color name="colorAccentDark">#046b6f</color>
     <color name="colorAccentLight">#007e82</color>
     <color name="textColorPrimary">#4a4a4a</color>
     <color name="textColorLight">#9b9b9b</color>
+    <color name="textColorFootDark">#B4D3D4</color>
 </resources>
