--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             style="@style/login_edit_text" />
 
         <com.uuzz.android.ui.view.MyButton
-            android:id="@+id/mb_get_identifying_code"
+            android:id="@+id/mb_get_verify_code"
             android:layout_marginTop="3dip"
             android:layout_alignParentRight="true"
             android:layout_marginRight="27dip"
