--- a/app/src/main/res/layout/fragment_growup.xml
+++ b/app/src/main/res/layout/fragment_growup.xml
@@ -24,6 +24,7 @@
                 android:gravity="center"
                 android:background="@drawable/growup_title_left_pink"
                 android:textColor="@color/white"
+                android:textSize="14dip"
                 android:text="全部"/>
             <TextView
                 android:id="@+id/tv_health"
@@ -33,6 +34,7 @@
                 android:gravity="center"
                 android:background="@drawable/growup_title_center_white"
                 android:textColor="@color/colorPrimary"
+                android:textSize="14dip"
                 android:text="健康"/>
             <TextView
                 android:id="@+id/tv_education"
@@ -42,6 +44,7 @@
                 android:gravity="center"
                 android:background="@drawable/growup_title_right_white"
                 android:textColor="@color/colorPrimary"
+                android:textSize="14dip"
                 android:text="教育"/>
         </LinearLayout>
 
@@ -52,7 +55,8 @@
             android:text="成长的烦恼"
             android:layout_below="@id/layout_title"
             android:layout_marginLeft="15dip"
-            android:layout_marginTop="20dip"/>
+            android:layout_marginTop="20dip"
+            android:visibility="gone"/>
         <View
             android:id="@+id/v_dir_line"
             android:layout_below="@id/tv_dir"
@@ -60,7 +64,8 @@
             android:layout_marginRight="15dip"
             android:layout_width="match_parent"
             android:layout_height="2dip"
-            android:background="@drawable/growup_dir_line"/>
+            android:background="@drawable/growup_dir_line"
+            android:visibility="gone"/>
 
         <com.uuzz.android.ui.view.ptr.PtrListView
             android:id="@+id/lv_listview"
