--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,18 @@
         <item name="android:inputType">number</item>
     </style>
 
+
+    <!--个人信息显示文本-->
+    <style name="tv_personal_info_item_left_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#4a4a4a</item>
+        <item name="android:textSize">18dip</item>
+    </style>
+    <style name="tv_personal_info_item_right_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#9b9b9b</item>
+        <item name="android:textSize">18dip</item>
+    </style>
 </resources>
