--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,10 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="49dip" >
+        android:background="@color/transparent"
+        android:layout_height="62dip" >
         <com.uuzz.android.ui.view.FootGroupBtn
             android:id="@+id/fgb_host"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:gravity="center"
             app:icon_value="@string/icon_add"
             app:text_value="@string/host_page"
             app:background_color="@color/colorAccent"
@@ -31,15 +28,13 @@
             app:value_color="@color/white"
             app:value_color_focus="@color/textColorFootDark"
             app:icon_height="25dip"
-            app:text_height="11dip" />
+            app:text_height="11dip"
+            style="@style/foot_btn" />
         <com.uuzz.android.ui.view.FootGroupBtn
             android:id="@+id/fgb_health"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            style="@style/foot_btn"
             app:icon_value="@string/icon_add"
-            app:text_value="@string/host_page"
+            app:text_value="@string/health"
             app:background_color="@color/colorAccent"
             app:background_color_focus="@color/colorAccentDark"
             app:icon_size="20dip"
@@ -48,30 +43,42 @@
             app:value_color_focus="@color/textColorFootDark"
             app:icon_height="25dip"
             app:text_height="11dip"/>
-        <com.uuzz.android.ui.view.FootGroupBtn
-            android:id="@+id/fgb_photo"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            app:icon_value="@string/icon_add"
-            app:text_value="@string/host_page"
-            app:background_color="@color/colorAccent"
-            app:background_color_focus="@color/colorAccentDark"
-            app:icon_size="20dip"
-            app:text_size="9dip"
-            app:value_color="@color/white"
-            app:value_color_focus="@color/textColorFootDark"
-            app:icon_height="25dip"
-            app:text_height="11dip"/>
+
+        <FrameLayout
+            style="@style/foot_btn"
+            android:layout_marginTop="0dip"
+            android:background="@color/transparent">
+            <View
+                android:layout_marginTop="13dip"
+                android:background="@color/colorAccent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            <ImageView
+                android:id="@+id/im_middle_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/bg_foot_btn_middle"/>
+            <com.uuzz.android.ui.view.FootGroupBtn
+                android:id="@+id/fgb_photo"
+                android:layout_marginTop="13dip"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:icon_value="@string/icon_add"
+                app:text_value="@string/picture"
+                app:background_color="@color/transparent"
+                app:background_color_focus="@color/transparent"
+                app:icon_size="20dip"
+                app:text_size="9dip"
+                app:value_color="@color/white"
+                app:value_color_focus="@color/textColorFootDark"
+                app:icon_height="25dip"
+                app:text_height="11dip"/>
+        </FrameLayout>
         <com.uuzz.android.ui.view.FootGroupBtn
             android:id="@+id/fgb_question"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            style="@style/foot_btn"
             app:icon_value="@string/icon_add"
-            app:text_value="@string/host_page"
+            app:text_value="@string/ask_and_answer"
             app:background_color="@color/colorAccent"
             app:background_color_focus="@color/colorAccentDark"
             app:icon_size="20dip"
@@ -82,12 +89,9 @@
             app:text_height="11dip"/>
         <com.uuzz.android.ui.view.FootGroupBtn
             android:id="@+id/fgb_grow_up"
-            android:layout_weight="1"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            style="@style/foot_btn"
             app:icon_value="@string/icon_add"
-            app:text_value="@string/host_page"
+            app:text_value="@string/grow_up"
             app:background_color="@color/colorAccent"
             app:background_color_focus="@color/colorAccentDark"
             app:icon_size="20dip"
