--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="textColorPrimary">#4a4a4a</color>
     <color name="textColorLight">#9b9b9b</color>
     <color name="textColorFootDark">#B4D3D4</color>
+    <color name="transparent">#00000000</color><!--透明 -->
 </resources>
