--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,12 @@
         <item name="android:inputType">number</item>
     </style>
 
+    <style name="foot_btn">
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginTop">13dip</item>
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
