--- a/app/src/main/res/layout/view_time_picker.xml
+++ b/app/src/main/res/layout/view_time_picker.xml
@@ -11,7 +11,8 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         app:numberColorNormal="@color/textColorPrimary"
-        app:numberColorSelected="@color/textColorPrimary"
+        app:numberColorSelected="@color/colorPrimary"
+        app:extra_desc="@string/year"
         app:maxValue="2016"
         app:minValue="1950"
         app:numberTextSize="@dimen/primary_text_size"
@@ -24,7 +25,8 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         app:numberColorNormal="@color/textColorPrimary"
-        app:numberColorSelected="@color/textColorPrimary"
+        app:numberColorSelected="@color/colorPrimary"
+        app:extra_desc="@string/month"
         app:maxValue="12"
         app:minValue="1"
         app:numberTextSize="@dimen/primary_text_size"
@@ -36,7 +38,8 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         app:numberColorNormal="@color/textColorPrimary"
-        app:numberColorSelected="@color/textColorPrimary"
+        app:numberColorSelected="@color/colorPrimary"
+        app:extra_desc="@string/day"
         app:maxValue="31"
         app:minValue="1"
         app:numberTextSize="@dimen/primary_text_size"
