--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <ImageView
+        style="@style/splash_background_image"
+        android:src="@drawable/sina_web_default"/>
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/sina_web_default"/>
-
-    <ImageView
-        android:id="@+id/im_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dip"
-        android:layout_width="98dip"
-        android:layout_height="98dip"
-        android:src="@drawable/login_logo"/>
-
-    <LinearLayout
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="218dip"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <EditText
-            android:id="@+id/et_phone_number"
-            android:hint="@string/phone_number"
-            style="@style/login_edit_text" />
-
+        android:fillViewport="true">
         <RelativeLayout
-            android:layout_marginTop="18dip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <EditText
-                android:id="@+id/et_identifying_code"
-                android:hint="@string/identifying_code"
-                style="@style/login_edit_text" />
-
-            <com.uuzz.android.ui.view.MyButton
-                android:id="@+id/mb_get_verify_code"
-                android:layout_marginTop="3dip"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20dip"
-                android:layout_width="wrap_content"
-                android:background="@drawable/bg_corner_primary_color"
-                android:layout_height="46dip"
-                android:text="@string/get_identifying_code"
-                android:paddingLeft="19dip"
-                android:paddingRight="19dip"
-                android:paddingTop="11dip"
-                android:paddingBottom="11dip"
-                android:textColor="@color/white"
-                android:textSize="17dip"/>
-        </RelativeLayout>
-
-        <com.uuzz.android.ui.view.MyButton
-            android:id="@+id/mb_login"
-            android:layout_marginTop="18dip"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="52dip"
-            android:layout_marginLeft="17dip"
-            android:layout_marginRight="17dip"
-            android:background="@drawable/bg_corner_primary_color"
-            android:text="@string/login"
-            android:textColor="@color/white"
-            android:textSize="17dip"/>
+            android:layout_height="match_parent">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/im_logo"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="67dip"
+                android:layout_width="98dip"
+                android:layout_height="98dip"
+                android:src="@drawable/login_logo"/>
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="218dip"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
+
+                <EditText
+                    android:id="@+id/et_phone_number"
+                    android:hint="@string/phone_number"
+                    style="@style/login_edit_text" />
+
+                <RelativeLayout
+                    android:layout_marginTop="18dip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/et_identifying_code"
+                        android:hint="@string/identifying_code"
+                        android:maxLength="8"
+                        style="@style/login_edit_text" />
+
+                    <com.uuzz.android.ui.view.MyButton
+                        android:id="@+id/mb_get_verify_code"
+                        android:layout_marginTop="3dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="20dip"
+                        android:layout_width="wrap_content"
+                        android:background="@drawable/bg_corner_primary_color"
+                        android:layout_height="46dip"
+                        android:text="@string/get_identifying_code"
+                        android:paddingLeft="19dip"
+                        android:paddingRight="19dip"
+                        android:paddingTop="11dip"
+                        android:paddingBottom="11dip"
+                        android:textColor="@color/white"
+                        android:textSize="17dip"/>
+                </RelativeLayout>
+
+                <com.uuzz.android.ui.view.MyButton
+                    android:id="@+id/mb_login"
+                    android:text="@string/login"
+                    style="@style/common_btn" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+</FrameLayout>
