--- a/app/src/main/res/layout/activtiy_splash.xml
+++ b/app/src/main/res/layout/activtiy_splash.xml
@@ -5,27 +5,27 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/sina_web_default"/>
-    
+        android:src="@drawable/sina_web_default"
+        style="@style/splash_background_image" />
+
     <ImageView
         android:id="@+id/im_logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dip"
-        android:layout_width="98dip"
-        android:layout_height="98dip"
+        android:layout_marginTop="89dip"
+        android:layout_width="130dip"
+        android:layout_height="130dip"
         android:src="@drawable/login_logo"/>
 
     <TextView
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="218dip"
+        android:layout_below="@id/im_logo"
+        android:layout_marginTop="72dip"
         android:layout_width="wrap_content"
         android:ems="1"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="27dip"
-        android:text="我是启动页"/>
+        android:textSize="36dip"
+        android:text="@string/app_name"/>
 
 </RelativeLayout>
