--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:layout_marginLeft">17dip</item>
         <item name="android:layout_marginRight">17dip</item>
         <item name="android:paddingLeft">25dip</item>
+        <item name="android:textSize">@dimen/primary_text_size</item>
         <item name="android:background">@drawable/bg_border_corner_white</item>
         <item name="android:inputType">number</item>
     </style>
@@ -39,5 +40,22 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#9b9b9b</item>
         <item name="android:textSize">18dip</item>
+    </style>
+
+    <style name="splash_background_image">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
+    <style name="common_btn">
+        <item name="android:layout_marginTop">18dip</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">52dip</item>
+        <item name="android:layout_marginLeft">17dip</item>
+        <item name="android:layout_marginRight">17dip</item>
+        <item name="android:background">@drawable/bg_corner_primary_color</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17dip</item>
     </style>
 </resources>
