--- a/app/src/main/res/drawable/bg_corner_primary_color.xml
+++ b/app/src/main/res/drawable/bg_corner_primary_color.xml
@@ -1,56 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape>
-            <solid
-                android:color="@color/colorPrimaryDark"/>
-            <padding
-                android:bottom="0dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp"
-                />
-            <corners android:radius="23dp"/>
-        </shape>
-    </item>
-    <item android:state_selected="true">
-        <shape>
-            <solid
-                android:color="@color/colorPrimaryDark"/>
-            <padding
-                android:bottom="0dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp"
-                />
-            <corners android:radius="23dp"/>
-        </shape>
-    </item>
-    <item android:state_checked="true">
-        <shape>
-            <solid
-                android:color="@color/colorPrimaryDark"/>
-            <padding
-                android:bottom="0dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp"
-                />
-            <corners android:radius="23dp"/>
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <solid
-                android:color="@color/colorPrimary"
-                />
-            <padding
-                android:bottom="0dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp"/>
-            <corners android:radius="23dp"/>
-        </shape>
-    </item>
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid
+        android:color="@color/colorPrimary"
+        />
+    <padding
+        android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp"/>
+    <corners android:radius="23dp"/>
+</shape>
