--- a/app/src/main/res/layout/activity_supplement_info.xml
+++ b/app/src/main/res/layout/activity_supplement_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
@@ -18,6 +19,7 @@
             <EditText
                 android:id="@+id/et_name"
                 style="@style/login_edit_text"
+                android:inputType="none"
                 android:textColor="@color/textColorHint"
                 android:layout_marginTop="80dip"
                 android:hint="@string/name" />
@@ -92,7 +94,7 @@
                     android:layout_height="23dip"
                     android:layout_alignParentRight="true"
                     android:layout_marginBottom="15dip"
-                    android:layout_marginRight="27dip"
+                    android:layout_marginRight="42dip"
                     android:layout_marginTop="15dip"
                     android:background="@drawable/choose_bron_time" />
             </RelativeLayout>
@@ -106,7 +108,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <com.uuzz.android.ui.view.ShadeView
+    <View
         android:id="@+id/v_masking"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -126,7 +128,7 @@
             android:background="@color/colorPrimary"
             android:orientation="vertical">
             <com.uuzz.android.ui.view.MyButton
-                android:id="@+id/btn_choose_time"
+                android:id="@+id/btn_choose_commit"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -140,6 +142,17 @@
             android:id="@+id/tp_choose_date"
             android:layout_width="match_parent"
             android:layout_height="0dip"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
+        <com.yijiehl.club.android.ui.view.NumberPickerView
+            android:id="@+id/np_club_picker"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            app:numberColorNormal="@color/textColorPrimary"
+            app:numberColorSelected="@color/colorPrimary"
+            app:numberTextSize="@dimen/primary_text_size"
+            app:drawLeftLine="true"
+            app:numberPageSize="5"/>
     </LinearLayout>
 </FrameLayout>
