--- a/ck-lib/src/main/res/layout/root_layout.xml
+++ b/ck-lib/src/main/res/layout/root_layout.xml
@@ -4,9 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:id="@+id/root_layout">
 
-    <include layout="@layout/header_layout"></include>
+    <include layout="@layout/header_layout" />
 
     <FrameLayout
         android:layout_weight="1"
