--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -85,7 +85,7 @@
                 android:textSize="@dimen/primary_text_size"
                 android:textColor="@color/textColorPrimary"
                 android:text="妈妈身体情况很好，饮食健康注意，合理膳食"/>
-            
+
             <ImageView
                 android:id="@+id/im_club_logo"
                 android:layout_alignTop="@id/im_arc_up"
@@ -97,10 +97,9 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="554dip">
+            style="@style/host_page_container">
             <ImageView
-                android:id="@+id/im_activity_image"
+                android:id="@+id/im_activity_background"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
@@ -148,8 +147,7 @@
                 android:layout_below="@id/activity_divider"
                 android:layout_toLeftOf="@+id/im_share_activity"
                 android:layout_marginRight="30dip"
-                android:layout_width="33dip"
-                android:layout_height="33dip"
+                style="@style/share_btn_size"
                 android:src="@drawable/collect"/>
             <ImageView
                 android:id="@id/im_share_activity"
@@ -157,12 +155,11 @@
                 android:layout_marginTop="10dip"
                 android:layout_below="@id/activity_divider"
                 android:layout_alignRight="@id/activity_divider"
-                android:layout_width="33dip"
-                android:layout_height="33dip"
+                style="@style/share_btn_size"
                 android:src="@drawable/share"/>
 
             <ImageView
-                android:id="@+id/im_logo_info"
+                android:id="@+id/im_logo_info_activity"
                 android:layout_width="wrap_content"
                 android:maxWidth="125dip"
                 android:layout_height="25dip"
@@ -171,6 +168,171 @@
                 android:layout_alignTop="@+id/im_collect_activity"
                 android:layout_alignLeft="@+id/activity_divider"
                 android:layout_alignStart="@+id/activity_divider" />
+        </RelativeLayout>
+
+        <RelativeLayout style="@style/host_page_container">
+            <ImageView
+                android:id="@+id/im_photo_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                tools:src="@drawable/bg_activity"/>
+            <ImageView
+                android:id="@+id/im_arc_3"
+                android:layout_width="match_parent"
+                android:layout_height="165dip"
+                android:layout_alignParentBottom="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/bg_tranlusent_arc"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_photo_share_btn_container"
+                android:layout_width="100dip"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/im_arc_3"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/text_space">
+                <ImageView
+                    android:id="@+id/im_collect_photo"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/collect"
+                    style="@style/share_btn_size" />
+                <ImageView
+                    android:id="@+id/im_share_photo"
+                    android:layout_alignParentLeft="true"
+                    style="@style/share_btn_size"
+                    android:src="@drawable/share"/>
+            </RelativeLayout>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_photo_container"
+                android:layout_width="239dip"
+                android:layout_height="73dip"
+                android:layout_marginTop="21dip"
+                android:layout_below="@id/rl_photo_share_btn_container"
+                android:layout_centerHorizontal="true">
+
+            </android.support.v4.view.ViewPager>
+        </RelativeLayout>
+
+        <RelativeLayout style="@style/host_page_container">
+            <ImageView
+                android:id="@+id/im_question_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                tools:src="@drawable/bg_activity"/>
+            <ImageView
+                android:id="@+id/im_arc_4"
+                android:layout_width="match_parent"
+                android:layout_height="165dip"
+                android:layout_alignParentBottom="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/bg_tranlusent_arc"/>
+            <TextView
+                android:id="@+id/tv_question_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/im_arc_4"
+                android:layout_marginTop="50dip"
+                android:layout_marginLeft="50dip"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="21dip"
+                android:background="@drawable/bg_line_text"
+                android:paddingBottom="14dip"
+                tools:text="婴儿一天喂几次奶？"/>
+
+            <ImageView
+                android:id="@+id/im_share_question"
+                android:layout_marginRight="43dip"
+                android:layout_marginTop="19dip"
+                android:layout_below="@id/tv_question_name"
+                android:layout_alignParentRight="true"
+                style="@style/share_btn_size"
+                android:src="@drawable/share"/>
+
+            <ImageView
+                android:id="@+id/im_logo_info_question"
+                android:layout_width="wrap_content"
+                android:maxWidth="125dip"
+                android:layout_height="25dip"
+                android:scaleType="fitStart"
+                tools:src="@drawable/club_logo_info"
+                android:layout_marginLeft="54dip"
+                android:layout_marginTop="23dip"
+                android:layout_below="@id/tv_question_name"/>
+        </RelativeLayout>
+
+        <RelativeLayout style="@style/host_page_container"
+            android:layout_marginBottom="0dip">
+            <ImageView
+                android:id="@+id/im_grow_up_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                tools:src="@drawable/bg_activity"/>
+            <ImageView
+                android:id="@+id/im_arc_5"
+                android:layout_width="match_parent"
+                android:layout_height="165dip"
+                android:layout_alignParentBottom="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/bg_tranlusent_arc"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_grow_upshare_btn_container"
+                android:layout_width="100dip"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/im_arc_5"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/text_space">
+                <ImageView
+                    android:id="@+id/im_collect_grow_up"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/collect"
+                    style="@style/share_btn_size" />
+                <ImageView
+                    android:id="@+id/im_share_grow_up"
+                    android:layout_alignParentLeft="true"
+                    style="@style/share_btn_size"
+                    android:src="@drawable/share"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_grow_up_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rl_grow_upshare_btn_container"
+                android:layout_marginTop="6dip"
+                android:layout_marginLeft="50dip"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="21dip"
+                android:background="@drawable/bg_line_text"
+                android:paddingBottom="5dip"
+                tools:text="婴儿保险知多少"/>
+
+            <ImageView
+                android:id="@+id/im_gas_station"
+                android:layout_width="66dip"
+                android:layout_height="60dip"
+                android:scaleType="fitStart"
+                tools:src="@drawable/gas_station"
+                android:layout_marginLeft="50dip"
+                android:layout_marginTop="14dip"
+                android:layout_below="@id/tv_grow_up_title"/>
+
+            <TextView
+                android:id="@+id/tv_grow_up_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_grow_up_title"
+                android:layout_toRightOf="@id/im_gas_station"
+                android:textColor="@color/textColorPrimary"
+                android:layout_marginLeft="20dip"
+                android:layout_marginTop="45dip"
+                android:textSize="21dip"
+                tools:text="@string/grow_up_gas_station"/>
+
         </RelativeLayout>
 
     </LinearLayout>
