--- a/app/src/main/res/drawable/bg_line_text_activity.xml
+++ b/app/src/main/res/drawable/bg_line_text_activity.xml
@@ -3,23 +3,29 @@
     <item>
         <shape>
             <solid
-                android:color="@color/colorAccent" />
+                android:color="#3bb7a5" />
             <padding
                 android:bottom="0dp"
                 android:left="0dp"
                 android:right="0dp"
                 android:top="0dp"/>
+            <corners android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"/>
         </shape>
     </item>
-    <item android:bottom="1dip">
+    <item android:bottom="1dip"
+        android:left="1dip"
+        android:right="1dip">
         <shape>
             <solid
                 android:color="@color/white" />
             <padding
                 android:bottom="1dp"
-                android:left="0dp"
-                android:right="0dp"
+                android:left="1dp"
+                android:right="1dp"
                 android:top="0dp"/>
+            <corners android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"/>
         </shape>
     </item>
 </layer-list>
