--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,8 +18,8 @@
                 android:id="@+id/im_logo"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="67dip"
-                android:layout_width="98dip"
-                android:layout_height="98dip"
+                android:layout_width="@dimen/login_logo"
+                android:layout_height="@dimen/login_logo"
                 android:src="@drawable/login_logo"/>
 
             <LinearLayout
