--- a/app/src/main/res/layout/activtiy_splash.xml
+++ b/app/src/main/res/layout/activtiy_splash.xml
@@ -12,8 +12,8 @@
         android:id="@+id/im_logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="89dip"
-        android:layout_width="130dip"
-        android:layout_height="130dip"
+        android:layout_width="@dimen/login_logo"
+        android:layout_height="@dimen/login_logo"
         android:src="@drawable/login_logo"/>
 
     <TextView
