--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,4 +69,32 @@
         <item name="android:layout_height">554dip</item>
         <item name="android:layout_marginBottom">49dip</item>
     </style>
+
+    <style name="host_photo_content">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="item_container">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="health_item_icon">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">100dip</item>
+        <item name="android:padding">20dip</item>
+        <item name="android:scaleType">fitCenter</item>
+    </style>
+
+    <style name="health_item_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingBottom">10dip</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/primary_text_size</item>
+    </style>
 </resources>
