--- a/app/src/main/res/layout/fragment_growup.xml
+++ b/app/src/main/res/layout/fragment_growup.xml
@@ -4,72 +4,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/layout_title"
-            android:layout_width="300dip"
-            android:layout_height="20dip"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dip"
-            android:layout_marginTop="16dip"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/tv_all"
-                android:layout_weight="1"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:background="@drawable/growup_title_left_pink"
-                android:textColor="@color/white"
-                android:textSize="14dip"
-                android:text="全部"/>
-            <TextView
-                android:id="@+id/tv_health"
-                android:layout_weight="1"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:background="@drawable/growup_title_center_white"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14dip"
-                android:text="健康"/>
-            <TextView
-                android:id="@+id/tv_education"
-                android:layout_weight="1"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:background="@drawable/growup_title_right_white"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14dip"
-                android:text="教育"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_dir"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="成长的烦恼"
-            android:layout_below="@id/layout_title"
-            android:layout_marginLeft="15dip"
-            android:layout_marginTop="20dip"
-            android:visibility="gone"/>
-        <View
-            android:id="@+id/v_dir_line"
-            android:layout_below="@id/tv_dir"
-            android:layout_marginLeft="15dip"
-            android:layout_marginRight="15dip"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="2dip"
-            android:background="@drawable/growup_dir_line"
-            android:visibility="gone"/>
+            android:layout_height="60dip"
+            android:background="#eeeeee">
 
+            <LinearLayout
+                android:id="@+id/layout_title"
+                android:layout_width="match_parent"
+                android:layout_height="30dip"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="33dip"
+                android:layout_marginLeft="33dip"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_all"
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/growup_title_left_pink"
+                    android:gravity="center"
+                    android:text="全部"
+                    android:textColor="@color/white"
+                    android:textSize="14dip" />
+
+                <TextView
+                    android:id="@+id/tv_health"
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/growup_title_center_white"
+                    android:gravity="center"
+                    android:text="健康"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14dip" />
+
+                <TextView
+                    android:id="@+id/tv_education"
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/growup_title_right_white"
+                    android:gravity="center"
+                    android:text="教育"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14dip" />
+            </LinearLayout>
+        </RelativeLayout>
+        
+      <EditText
+          android:layout_width="match_parent"
+          android:layout_height="44dip"
+          android:layout_marginLeft="15dip"
+          android:layout_marginRight="15dip"
+          android:layout_marginTop="10dip"
+          android:hint="搜索"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dip"
+            android:layout_marginTop="10dip"
+            android:background="#eeeeee"/>
         <com.uuzz.android.ui.view.ptr.PtrListView
             android:id="@+id/lv_listview"
-            android:layout_below="@id/v_dir_line"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
@@ -79,7 +83,7 @@
             android:background="@drawable/bg_item_white_touchable"
             android:listSelector="@drawable/bg_item_white_touchable"
             android:scrollbarStyle="outsideOverlay" />
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
