--- a/app/src/main/res/layout/fragment_picture.xml
+++ b/app/src/main/res/layout/fragment_picture.xml
@@ -42,13 +42,24 @@
                 android:textSize="14dip" />
 
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_uploading"
+            android:layout_below="@id/layout_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/uploading_small"
+            android:layout_marginLeft="16dip"
+            android:visibility="gone"/>
+
         <com.uuzz.android.ui.view.ptr.PtrListView
             android:id="@+id/lv_listview"
-            android:layout_below="@id/layout_title"
+            android:layout_below="@id/iv_uploading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="15dip"
             android:layout_marginRight="15dip"
+            android:layout_marginTop="15dip"
             android:divider="@null"
             android:fadingEdge="none"
             android:focusable="true"
